# textquery

./: .gitignore  Makefile  README.md  pyproject.toml
tests/: test_query.py
textquery/: __init__.py  query.py
