[tool.poetry]
name = "textquery-py"
version = "0.1.0"
description = ""
authors = ["Denis Dubovitskiy <denisdubovitskiy@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
